--- a/alexkuz.me/index.html
+++ b/alexkuz.me/index.html
@@ -36,8 +36,8 @@
         -webkit-box-pack: center;
         -ms-flex-pack: center;
         justify-content: center;
-
         background-color: #001f3f;
+        font-family: 'Jost', sans-serif;
       }
       
       h1 {
