--- a/alexkuz.me/index.html
+++ b/alexkuz.me/index.html
@@ -94,7 +94,7 @@
   <body>
     <h1>Alexander Kuznetsov</h1>
     <p>Frontend developer</p>
-    <svg aria-role="presentation" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="0" height="0">
+    <svg role="presentation" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="0" height="0">
         <symbol id="icon-mail" viewBox="0 0 32 32">
             <title>
                 mail
