--- a/alexkuz.me/safari-please.html
+++ b/alexkuz.me/safari-please.html
@@ -7,6 +7,7 @@
 	<style type="text/css">
 		body {
 			display: flex;
+			flex-direction: column;
 			gap: 2rem;
 		}
 
@@ -42,9 +43,16 @@
 		</pre>
 		<div class="result" id="binary-result">Loading...</div>
 	</section>
+	<section>
+		<pre>
+			Content-Type: application/json
+		</pre>
+		<div class="result" id="json-result">Loading...</div>
+	</section>
 	<script type="text/javascript">
 		let app = document.getElementById("application-result");
 		let bin = document.getElementById("binary-result");
+		let json = document.getElementById("json-result");
 
 		fetch('/files/application.json.gz').then(res => res.json()).then(json => {
 			app.setAttribute('data-status', 'success');
@@ -60,6 +68,14 @@
 		}).catch(e => {
 			bin.setAttribute('data-status', 'failure');
 			bin.innerHTML = 'Failure :(';
+		})
+
+		fetch('/files/json.json.gz').then(res => res.json()).then(json => {
+			json.setAttribute('data-status', 'success');
+			json.innerHTML = 'Success!';
+		}).catch(e => {
+			json.setAttribute('data-status', 'failure');
+			json.innerHTML = 'Failure :(';
 		})
 	</script>
 </body>
