--- a/alexkuz.me/safari-please.html
+++ b/alexkuz.me/safari-please.html
@@ -33,26 +33,37 @@
 <body>
 	<section>
 		<pre>
+			Content-Encoding: gzip
 			Content-Type: application/octet-stream
 		</pre>
-		<div class="result" id="application-result">Loading...</div>
+		<div class="result" id="app-result">Loading...</div>
 	</section>
 	<section>
 		<pre>
+			Content-Encoding: gzip
 			Content-Type: binary/octet-stream
 		</pre>
-		<div class="result" id="binary-result">Loading...</div>
+		<div class="result" id="bin-result">Loading...</div>
 	</section>
 	<section>
 		<pre>
+			Content-Encoding: gzip
 			Content-Type: application/json
 		</pre>
 		<div class="result" id="json-result">Loading...</div>
 	</section>
+	<section>
+		<pre>
+			Content-Encoding: brotli
+			Content-Type: application/octet-stream
+		</pre>
+		<div class="result" id="app-br-result">Loading...</div>
+	</section>
 	<script type="text/javascript">
-		let appEl = document.getElementById("application-result");
-		let binEl = document.getElementById("binary-result");
+		let appEl = document.getElementById("app-result");
+		let binEl = document.getElementById("bin-result");
 		let jsonEl = document.getElementById("json-result");
+		let appBrEl = document.getElementById("app-br-result");
 
 		fetch('/files/application.json.gz').then(res => res.json()).then(json => {
 			appEl.setAttribute('data-status', 'success');
@@ -76,6 +87,14 @@
 		}).catch(e => {
 			jsonEl.setAttribute('data-status', 'failure');
 			jsonEl.innerHTML = 'Failure :(';
+		})
+
+		fetch('/files/application.json.br').then(res => res.json()).then(json => {
+			appBrEl.setAttribute('data-status', 'success');
+			appBrEl.innerHTML = 'Success!';
+		}).catch(e => {
+			appBrEl.setAttribute('data-status', 'failure');
+			appBrEl.innerHTML = 'Failure :(';
 		})
 	</script>
 </body>
