--- a/alexkuz.me/index.html
+++ b/alexkuz.me/index.html
@@ -113,10 +113,17 @@
             </title>
             <path d="M16 .4a16 16 0 0 0-5.06 31.18c.8.14 1.1-.35 1.1-.77L12 27.83c-4.45.97-5.39-1.89-5.39-1.89-.73-1.85-1.77-2.34-1.77-2.34-1.46-1 .1-.97.1-.97 1.61.1 2.46 1.64 2.46 1.64 1.43 2.45 3.74 1.74 4.65 1.33a3.4 3.4 0 0 1 1.02-2.14c-3.55-.4-7.29-1.77-7.29-7.9a6.2 6.2 0 0 1 1.65-4.3c-.17-.4-.71-2.03.15-4.23 0 0 1.35-.43 4.4 1.64a15.35 15.35 0 0 1 8.02 0c3.05-2.07 4.4-1.64 4.4-1.64.86 2.2.32 3.83.15 4.23a6.18 6.18 0 0 1 1.65 4.3c0 6.14-3.75 7.5-7.3 7.9.57.49 1.08 1.46 1.08 2.96l-.02 4.39c0 .42.29.92 1.1.76A16 16 0 0 0 16 .4z"/>
         </symbol>
+        <symbol id="icon-bluesky" viewBox="0 0 32 32">
+          <title>
+            bluesky
+          </title>
+          <path d="M16 14.6C14.6 11.8 10.6 6.5 6.9 4 3.4 1.5 2.1 1.9 1.2 2.3.2 2.8 0 4.3 0 5.2c0 1 .5 7.6.8 8.7 1.1 3.6 5 4.9 8.5 4.5.2-.1.4-.1.6-.1-.2 0-.4 0-.6.1-5.2.7-9.3 3.6-3.7 9.4C12 34 14.7 26.3 16 22c1.3 4.3 3 12 10.3 5.8 5.7-5.8 1.6-8.7-3.6-9.4-.2 0-.4-.1-.6-.1.2 0 .4 0 .6.1 3.5.4 7.4-.9 8.5-4.5.3-1.1.8-7.7.8-8.7 0-.9-.2-2.4-1.2-2.9-.9-.4-2.2-.8-5.7 1.7-3.7 2.5-7.7 7.8-9.1 10.6z"/>
+        </symbol>
     </svg>
     <div class="icons">
       <a class="icon-link" href="https://github.com/alexkuz" aria-label="github"><svg class="icon icon-github" role="presentation"><use xlink:href="#icon-github" /></svg></a>
       <a class="icon-link" href="https://twitter.com/c0cl3nn0nk37" aria-label="twitter"><svg class="icon icon-twitter" role="presentation"><use xlink:href="#icon-twitter" /></svg></a>
       <a class="icon-link" href="mailto:alexkuz@gmail.com" aria-label="email"><svg class="icon icon-mail" role="presentation"><use xlink:href="#icon-mail" /></svg></a>
+      <a class="icon-link" href="https://bsky.app/profile/alexkuz.me" aria-label="bluesky"><svg class="icon icon-bluesky" role="presentation"><use xlink:href="#icon-bluesky" /></svg></a>
   </body>
 </html>
