--- a/alexkuz.me/index.html
+++ b/alexkuz.me/index.html
@@ -145,12 +145,19 @@
           </title>
           <path d="M16 14.6C14.6 11.8 10.6 6.5 6.9 4 3.4 1.5 2.1 1.9 1.2 2.3.2 2.8 0 4.3 0 5.2c0 1 .5 7.6.8 8.7 1.1 3.6 5 4.9 8.5 4.5.2-.1.4-.1.6-.1-.2 0-.4 0-.6.1-5.2.7-9.3 3.6-3.7 9.4C12 34 14.7 26.3 16 22c1.3 4.3 3 12 10.3 5.8 5.7-5.8 1.6-8.7-3.6-9.4-.2 0-.4-.1-.6-.1.2 0 .4 0 .6.1 3.5.4 7.4-.9 8.5-4.5.3-1.1.8-7.7.8-8.7 0-.9-.2-2.4-1.2-2.9-.9-.4-2.2-.8-5.7 1.7-3.7 2.5-7.7 7.8-9.1 10.6z"/>
         </symbol>
+        <symbol id="icon-linkedin" viewBox="0 0 72 72">
+          <title>
+            linkedin
+          </title>
+          <path d="M8 72h56a8 8 0 0 0 8-8V8a8 8 0 0 0-8-8H8a8 8 0 0 0-8 8v56a8 8 0 0 0 8 8zm54-10H51.316V43.802c0-4.99-1.896-7.777-5.845-7.777-4.296 0-6.54 2.901-6.54 7.777V62H28.632V27.333H38.93v4.67s3.096-5.729 10.453-5.729c7.353 0 12.617 4.49 12.617 13.777V62zM16.35 22.794c-3.508 0-6.35-2.864-6.35-6.397C10 12.864 12.842 10 16.35 10c3.507 0 6.347 2.864 6.347 6.397 0 3.533-2.84 6.397-6.348 6.397zM11.032 62V27.333h10.736V62H11.033z"/>
+        </symbol>
     </svg>
     <div class="icons">
       <a class="icon-link" href="https://github.com/alexkuz" aria-label="github"><svg class="icon icon-github" role="presentation"><use xlink:href="#icon-github" /></svg></a>
       <a class="icon-link" href="https://twitter.com/_alexkuz_" aria-label="twitter"><svg class="icon icon-twitter" role="presentation"><use xlink:href="#icon-twitter" /></svg></a>
       <a class="icon-link" href="mailto:alexkuz@gmail.com" aria-label="email"><svg class="icon icon-mail" role="presentation"><use xlink:href="#icon-mail" /></svg></a>
       <a class="icon-link" href="https://bsky.app/profile/alexkuz.me" aria-label="bluesky"><svg class="icon icon-bluesky" role="presentation"><use xlink:href="#icon-bluesky" /></svg></a>
+      <a class="icon-link" href="https://linkedin.com/in/kuzya" aria-label="linkedin"><svg class="icon icon-linkedin" role="presentation"><use xlink:href="#icon-linkedin" /></svg></a>
     </div>
       <a class="link" href="/Profile.pdf">CV →</a>
     </main>
