height for mobile

--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <style type="text/css">
-      html {
-        height:  100%;
-      }
- 
       body {
         color: #FFFFFF;
-        height: 100%;
+        height: 100vh;
+        height: 100svh;
         width: 100%;
         margin: 0;
         box-sizing: border-box;
