--- a/alexkuz.me/index.html
+++ b/alexkuz.me/index.html
@@ -153,33 +153,23 @@
     <p>Frontend developer</p>
     <svg role="presentation" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="0" height="0">
         <symbol id="icon-mail" viewBox="0 0 32 32">
-            <title>
-                mail
-            </title>
+            <title>mail</title>
             <path d="M16 0a16 16 0 1 0 0 32 16 16 0 0 0 0-32zM8 8h16c.29 0 .56.06.82.18L16 18.46 7.18 8.18C7.44 8.06 7.71 8 8 8zM6 22V10v-.13l5.87 6.85-5.8 5.8A1.98 1.98 0 0 1 6 22zm18 2H8c-.18 0-.35-.02-.52-.07l5.7-5.69 2.82 3.3 2.83-3.3 5.69 5.7c-.17.04-.34.06-.52.06zm2-2c0 .18-.02.35-.07.52l-5.8-5.8L26 9.88V22z"></path>
         </symbol>
         <symbol id="icon-twitter" viewBox="0 0 32 32">
-            <title>
-                twitter
-            </title>
+            <title>twitter</title>
             <path d="M32 7.08c-1.18.52-2.44.87-3.77 1.03a6.6 6.6 0 0 0 2.89-3.63c-1.27.74-2.68 1.3-4.17 1.59a6.57 6.57 0 0 0-11.19 5.99A18.63 18.63 0 0 1 2.23 5.19a6.56 6.56 0 0 0 2.03 8.77 6.56 6.56 0 0 1-2.97-.82v.08a6.56 6.56 0 0 0 5.27 6.44 6.57 6.57 0 0 1-2.97.1 6.59 6.59 0 0 0 6.13 4.57 13.17 13.17 0 0 1-9.73 2.72A18.57 18.57 0 0 0 10.06 30c12.08 0 18.68-10 18.68-18.68l-.01-.85C30 9.55 31.12 8.39 32 7.07z"></path>
         </symbol>
         <symbol id="icon-github" viewBox="0 0 32 32">
-            <title>
-                github
-            </title>
+            <title>github</title>
             <path d="M16 .4a16 16 0 0 0-5.06 31.18c.8.14 1.1-.35 1.1-.77L12 27.83c-4.45.97-5.39-1.89-5.39-1.89-.73-1.85-1.77-2.34-1.77-2.34-1.46-1 .1-.97.1-.97 1.61.1 2.46 1.64 2.46 1.64 1.43 2.45 3.74 1.74 4.65 1.33a3.4 3.4 0 0 1 1.02-2.14c-3.55-.4-7.29-1.77-7.29-7.9a6.2 6.2 0 0 1 1.65-4.3c-.17-.4-.71-2.03.15-4.23 0 0 1.35-.43 4.4 1.64a15.35 15.35 0 0 1 8.02 0c3.05-2.07 4.4-1.64 4.4-1.64.86 2.2.32 3.83.15 4.23a6.18 6.18 0 0 1 1.65 4.3c0 6.14-3.75 7.5-7.3 7.9.57.49 1.08 1.46 1.08 2.96l-.02 4.39c0 .42.29.92 1.1.76A16 16 0 0 0 16 .4z"></path>
         </symbol>
         <symbol id="icon-bluesky" viewBox="0 0 32 32">
-          <title>
-            bluesky
-          </title>
+          <title>bluesky</title>
           <path d="M16 14.6C14.6 11.8 10.6 6.5 6.9 4 3.4 1.5 2.1 1.9 1.2 2.3.2 2.8 0 4.3 0 5.2c0 1 .5 7.6.8 8.7 1.1 3.6 5 4.9 8.5 4.5.2-.1.4-.1.6-.1-.2 0-.4 0-.6.1-5.2.7-9.3 3.6-3.7 9.4C12 34 14.7 26.3 16 22c1.3 4.3 3 12 10.3 5.8 5.7-5.8 1.6-8.7-3.6-9.4-.2 0-.4-.1-.6-.1.2 0 .4 0 .6.1 3.5.4 7.4-.9 8.5-4.5.3-1.1.8-7.7.8-8.7 0-.9-.2-2.4-1.2-2.9-.9-.4-2.2-.8-5.7 1.7-3.7 2.5-7.7 7.8-9.1 10.6z"></path>
         </symbol>
         <symbol id="icon-linkedin" viewBox="0 0 72 72">
-          <title>
-            linkedin
-          </title>
+          <title>linkedin</title>
           <path d="M8 72h56a8 8 0 0 0 8-8V8a8 8 0 0 0-8-8H8a8 8 0 0 0-8 8v56a8 8 0 0 0 8 8zm54-10H51.316V43.802c0-4.99-1.896-7.777-5.845-7.777-4.296 0-6.54 2.901-6.54 7.777V62H28.632V27.333H38.93v4.67s3.096-5.729 10.453-5.729c7.353 0 12.617 4.49 12.617 13.777V62zM16.35 22.794c-3.508 0-6.35-2.864-6.35-6.397C10 12.864 12.842 10 16.35 10c3.507 0 6.347 2.864 6.347 6.397 0 3.533-2.84 6.397-6.348 6.397zM11.032 62V27.333h10.736V62H11.033z"></path>
         </symbol>
     </svg>
@@ -338,8 +328,8 @@
           float noise = rand(int(uv.x*10000.), int(uv.y*10000.)) * .1;
 
           float stars = rand(
-            int((uv.x + iTime * 0.001) * 800. + iTime * 0.1),
-            int((uv.y - iTime * 0.001) * 800. + iTime * 0.1)
+            int((uv.x + time * 0.2) * 800. + time * 20.),
+            int((uv.y - time * 0.2) * 800. + time * 20.)
           );
 
           vec3 col = mix(col1top, col1bottom, 1. - uv.y + noise);
