--- a/alexkuz.me/index.html
+++ b/alexkuz.me/index.html
@@ -16,69 +16,39 @@
         margin: 0;
         box-sizing: border-box;
         padding: 80px;
-        padding: clamp(2rem, 8vw, 8rem);
+        padding: 0;
         background-color: #001f3f;
         font-family: 'Jost', sans-serif;
-      }
-
-      @media(max-width: 768px) {
-        body {
-          padding: 30px;
-        }
       }
 
       main {
         box-sizing: border-box;
         height: 100%;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        -webkit-box-align: start;
-        -ms-flex-align: start;
-        align-items: flex-start;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        padding-bottom: 10rem;
+        padding: 20vh max(5vh, 30px);
+        overflow-y: auto;
       }
       
       h1 {
          margin: 0;
-        font-size: 3em;
+        font-size: 2em;
+        line-height: 1.2em;
         font-weight: 400;
         letter-spacing: 0.02em;
       }
-
-      @media(max-width: 768px) {
-        h1 {
-          font-size: 2em;
-        }
-      }
       
       p {
-        font-size: 1.8em;
+        font-size: 1.5em;
         font-weight: 300;
         letter-spacing: 0.01em;
-        margin-block: 10px 30px;
-      }
-
-      @media(max-width: 768px) {
-        p {
-          font-size: 1.3em;
-          margin-block: 10px 20px;
-        }
+        margin-block: 10px 5px;
       }
 
       .icons {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        gap: 1rem;
-        margin-bottom: 2rem;
+        gap: 15px;
+        margin-bottom: 30px;
       }
 
       .icon-link, .icon-link:visited {
@@ -88,6 +58,12 @@
         width:  2em;
         width: clamp(1.8em, 5vw, 2em);
         height:  2em;
+      }
+
+      .icon-link:focus-visible {
+        outline: 1px solid #ffffff;
+        outline-offset: 4px;
+        border-radius: 2px;
       }
 
       .icon {
@@ -114,6 +90,12 @@
 
       .link:hover {
         text-decoration: underline;
+      }
+
+      .link:focus-visible {
+        outline: 1px solid #ffffff;
+        outline-offset: 4px;
+        border-radius: 2px;
       }
 
       #bg-canvas {
