change precision (for android)

--- a/alexkuz.me/index.html
+++ b/alexkuz.me/index.html
@@ -135,7 +135,7 @@ void main() {
 }</script>
     <script id="fragment-shader" type="x-shader/x-fragment">#version 300 es
 #ifdef GL_ES
-precision mediump float;
+precision highp float;
 #endif
 
 uniform float u_time;
