--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,16 @@
           <path d="M8 72h56a8 8 0 0 0 8-8V8a8 8 0 0 0-8-8H8a8 8 0 0 0-8 8v56a8 8 0 0 0 8 8zm54-10H51.316V43.802c0-4.99-1.896-7.777-5.845-7.777-4.296 0-6.54 2.901-6.54 7.777V62H28.632V27.333H38.93v4.67s3.096-5.729 10.453-5.729c7.353 0 12.617 4.49 12.617 13.777V62zM16.35 22.794c-3.508 0-6.35-2.864-6.35-6.397C10 12.864 12.842 10 16.35 10c3.507 0 6.347 2.864 6.347 6.397 0 3.533-2.84 6.397-6.348 6.397zM11.032 62V27.333h10.736V62H11.033z"/>
         </symbol>
     </svg>
+    <button id="clock-button" type="button" aria-label="forward time" aria-description="hold to fast forward time or press T" aria-pressed="false">
+      <svg id="clock" role="presentation" viewBox="0 0 32 32">
+        <circle cx="16" cy="16" r="15" fill="none" stroke="#FFFFFF" stroke-width="1" />
+        <g id="clock-hands">
+          <path id="hour-hand" d="M 15 16 L 16 6 L 17 16 A 1 1 0 0 1 15 16" fill="#FFFFFF" />
+          <path id="minute-hand" d="M 15 16 L 16 2 L 17 16 A 1 1 0 0 1 15 16" fill="#FFFFFF" />
+          <path id="second-hand" d="M 16 16 L 16 3" stroke="#FFFFFF" stroke-width="0.5" />
+        </g>
+      </svg>
+    </button>
     <div class="icons">
       <a class="icon-link" href="https://github.com/alexkuz" aria-label="github"><svg class="icon icon-github" role="presentation"><use xlink:href="#icon-github" /></svg></a>
       <a class="icon-link" href="https://twitter.com/_alexkuz_" aria-label="twitter"><svg class="icon icon-twitter" role="presentation"><use xlink:href="#icon-twitter" /></svg></a>
@@ -50,6 +60,11 @@
     </div>
       <a class="link" href="/Profile.pdf">CV →</a>
     </main>
+    <script type="text/javascript">
+      window.timeTravel = false;
+      window.timeShift = 0;
+    </script>
     <script type="text/javascript" src="./canvas.js"></script>
+    <script type="text/javascript" src="./clock.js"></script>
   </body>
 </html>
