--- a/alexkuz.me/index.html
+++ b/alexkuz.me/index.html
@@ -507,6 +507,7 @@ window.addEventListener("keyup", () => {
   window.timeTravel = false;
 });
 </script>
+    <script async="" src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   
 
 </body></html>
