--- a/src/index.html
+++ b/src/index.html
@@ -66,5 +66,6 @@
     </script>
     <script type="text/javascript" src="./canvas.js"></script>
     <script type="text/javascript" src="./clock.js"></script>
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   </body>
 </html>
