add bsky firehose

--- a/src/index.html
+++ b/src/index.html
@@ -53,12 +53,11 @@
     </button>
     <div class="icons">
       <a class="icon-link" href="https://github.com/alexkuz" aria-label="github"><svg class="icon icon-github" role="presentation"><use xlink:href="#icon-github" /></svg></a>
-      <a class="icon-link" href="https://twitter.com/_alexkuz_" aria-label="twitter"><svg class="icon icon-twitter" role="presentation"><use xlink:href="#icon-twitter" /></svg></a>
-      <a class="icon-link" href="mailto:alexkuz@gmail.com" aria-label="email"><svg class="icon icon-mail" role="presentation"><use xlink:href="#icon-mail" /></svg></a>
       <a class="icon-link" href="https://bsky.app/profile/alexkuz.me" aria-label="bluesky"><svg class="icon icon-bluesky" role="presentation"><use xlink:href="#icon-bluesky" /></svg></a>
+      <a class="icon-link" href="mailto:alexkuz@gmail.com" aria-label="email"><svg class="icon icon-mail" role="presentation"><use xlink:href="#icon-mail" /></svg></a>
       <a class="icon-link" href="https://linkedin.com/in/kuzya" aria-label="linkedin"><svg class="icon icon-linkedin" role="presentation"><use xlink:href="#icon-linkedin" /></svg></a>
+      <a class="link cv" href="/Profile.pdf">CV</a>
     </div>
-      <a class="link" href="/Profile.pdf">CV →</a>
     </main>
     <script type="text/javascript">
       window.timeTravel = false;
@@ -66,6 +65,7 @@
     </script>
     <script type="text/javascript" src="./canvas.js"></script>
     <script type="text/javascript" src="./clock.js"></script>
+    <script  type="text/javascript" src="./firehose.js"></script>
     <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   </body>
 </html>
